src/assets/global.scss
@use "./fonts";
:root {
  --color-white: #fffefc;
  --color-red: #d63d21;
  --color-beige: #f9f2e0;
  --color-beige-medium: #514b43;
  --color-beige-dark: #1f170c;
  --color-beige-dark-medium: #998875;
  --color-border: #231c124d;
  --divider: 0.5px solid var(--color-border);
}
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  font-family: Golos, Arial, Helvetica, sans-serif;
  font-weight: normal;
}
* {
  -webkit-tap-highlight-color: transparent;
  -ms-overflow-style: none;
  &::-webkit-scrollbar {
    display: none;
  }
}
html {
  font-size: 16px;

  @media (width >= 768px) {
    font-size: 20px;
  }
}
body {
  min-height: 100vh;
  color: var(--color-beige-dark);
  background-color: var(--color-beige);
}
ul {
  padding: 0;
  margin: 0;
  list-style: none;
}
#app {
  display: grid;
  grid-template-rows: 1fr min-content;
  max-width: 1280px;
  min-height: 100vh;
  padding: 0;
  margin: 0 auto;
}
.container {
  padding: 1.25rem 1rem;
}
.header {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 2.625rem;
  padding: 0 1rem;
  border-bottom: var(--divider);
  &--left {
    justify-content: flex-start;
  }
}
.button {
  display: inline-flex;
  gap: 0.25rem;
  align-items: center;
  justify-content: center;
  max-width: 300px;
  padding: 0.625rem 1.875rem;
  font: inherit;
  color: var(--color-white);
  white-space: nowrap;
  cursor: pointer;
  background: var(--color-beige-dark);
  border: none;
  border-radius: 8px;
  outline: none;
  transition: transform .2s;
  &--block {
    width: 100%;
  }
  &--big {
    padding: 1rem 3.125rem;
    font-weight: 500;
  }
  &:hover,
  &:focus-visible {
    background-color: var(--color-beige-dark-medium);
  }
  &:active {
    transform: scale(.99);
  }
}
a {
  color: var(--color-beige-dark);
  text-decoration: none;
  &.router-link-active {
    color: var(--color-red);
  }
}
.link {
  font: inherit;
  color: var(--color-red);
  cursor: pointer;
  background: none;
  border: none;
  outline: none;
  &:hover,
  &:focus-visible,
  &.router-link-active {
    text-decoration: underline;
  }
}
.icon-button {
  display: inline-grid;
  place-items: center;
  padding: 0;
  color: var(--color-beige-dark);
  cursor: pointer;
  background: none;
  border: none;
  outline: none;
  svg {
    width: 1.375rem;
    height: 1.375rem;
  }
  &:hover,
  &:focus-visible {
    color: var(--color-beige-dark-medium);
  }
}
.content-card {
  display: flex;
  flex-direction: column;
  &__image {
    align-self: center;
    max-width: 100%;
    margin: 3.5rem 0 2.5rem;
  }
  &__title {
    font-family: Literata, serif;
    font-size: 1.625rem;
    font-weight: 600;
  }
  &__subtitle {
    margin-top: 0.375rem;
    font-weight: 500;
    color: var(--color-beige-dark);
    opacity: 0.4;
  }
  &__description {
    margin-top: 1rem;
  }
}

// Disable hover styles on touch
@media (hover: none) {
  *:hover {
    color: inherit !important;
  }
}

